src/objects/Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residence?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_1__c</fullName>
        <label>Test 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Residence</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Residence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_2__c</fullName>
        <label>Test 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Residence__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Residence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date_Sent__c</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>TestValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL(Test_1__c, &quot;Not Residence&quot;),ISPICKVAL(Test_2__c,&quot;2&quot;)),true,false)</errorConditionFormula>
        <errorMessage>Not residence cannot have test 2 as 2</errorMessage>
    </validationRules>
</CustomObject>